[KYUUBI-175] define the parameters for supporting kyuubi-cluster mode